# homelab

./: .gitignore  .pre-commit-config.yaml  .yamllint  LICENSE  Makefile  README.md  architecture.md  core_infra_app.yaml  live_backup_schedule.yaml  live_nextcloud_schedule.yaml  nextcloud_app.yaml  pyproject.toml  renovate.json  requirements.txt
.agent/rules/: general-rules.md
.github/: CODEOWNERS
.github/workflows/: argo-diff-preview.yaml  claude-code-review.yml  claude.yml  docs.yaml  lint-ansible.yaml  lint-markdown.yaml  lint-python.yaml  lint-yaml.yaml  lint.yaml  renovate-validate.yaml  renovate-validate.yml  reusable-docker-build.yaml  reusable-docker-build.yml  yaml-lint.yaml
ansible/: inventory.yaml  inventory.yml
ansible/playbooks/: config.yaml  config.yml  download.yaml  download.yml  kubeconfig.yml
ansible/templates/: butane_config.yaml.j2  kubeadm.yaml.j2  pxe_config.j2
boot_server/: serve.py
payload/: root-app.yaml  root.yaml
payload/apps/: benchmarks-app.yaml  nginx-test.yaml  pelican.yaml  root-app.yaml
payload/argocd/: application.yaml  argocd-projects.yaml  argocd-values.yaml  httproute.yaml  values.yaml
payload/bootstrap/: argocd-application.yaml  argocd-values.yaml  root-app.yaml
payload/core/: README.md  argocd-cert.yaml  cert-manager.yaml  certificates.yaml  cilium-pool.yaml  cilium-rbac-fix.yaml  cilium-values.yaml  cilium.yaml  cluster-issuer-prod.yaml  cluster-issuer.yaml  gateways.yaml  httproutes.yaml  route53-credentials.yaml.template
payload/platform/: README.md
payload/workloads/: README.md
(+165 files in other folders)
