[project]
name = "flatcar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "ansible==13.1.0",
    "ansible-lint>=25.12.2",
    "pre-commit>=4.5.1",
    "tftpy==0.8.6",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.1",
    "pylint>=4.0.4",
    "yamllint>=1.37.1",
]
